--- a/source/app/server/CMakeLists.txt
+++ b/source/app/server/CMakeLists.txt
@@ -1,15 +1,21 @@
 project(server)
-
-include_directories(${CMAKE_SOURCE_DIR}/lib)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SERVER_SOURCES)
+
+# Libraries
+include_directories(${CMAKE_SOURCE_DIR}/lib/lib_common/inc)
 
 # IO query headers
 file(GLOB_RECURSE SERVER_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h")
+file(GLOB_RECURSE SERVER_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
 add_executable(server "${SERVER_SOURCES}" "${SERVER_HEADERS}")
-add_dependencies(server shared)
-target_link_libraries(server shared)
+add_dependencies(server
+    lib_common
+)
+
+target_link_libraries(server
+    lib_common
+)
 
 install(
     TARGETS  server
