lib_game, added core server main.cpp to test against implementation as we creep this in

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,6 +3,7 @@ project(XNativeMain)
 
 # Libraries
 add_subdirectory(lib/lib_common)
+add_subdirectory(lib/lib_game)
 
 # Applications
 add_subdirectory(app/client-headless)
