--- a/source/app/server/CMakeLists.txt
+++ b/source/app/server/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
 
 # Libraries
 include_directories(${CMAKE_SOURCE_DIR}/lib/lib_common/inc)
+include_directories(${CMAKE_SOURCE_DIR}/lib/lib_game/inc)
 
 # IO query headers
 file(GLOB_RECURSE SERVER_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h")
@@ -11,10 +12,12 @@ file(GLOB_RECURSE SERVER_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 add_executable(server "${SERVER_SOURCES}" "${SERVER_HEADERS}")
 add_dependencies(server
     lib_common
+	lib_game
 )
 
 target_link_libraries(server
     lib_common
+	lib_game
 )
 
 install(
