--- a/source/app/server/CMakeLists.txt
+++ b/source/app/server/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
 # Libraries
 include_directories(${CMAKE_SOURCE_DIR}/lib/lib_common/inc)
 include_directories(${CMAKE_SOURCE_DIR}/lib/lib_game/inc)
+include_directories(${CMAKE_SOURCE_DIR}/lib/lib_net/inc)
 
 # IO query headers
 file(GLOB_RECURSE SERVER_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h")
@@ -13,11 +14,13 @@ add_executable(server "${SERVER_SOURCES}" "${SERVER_HEADERS}")
 add_dependencies(server
     lib_common
 	lib_game
+	lib_net
 )
 
 target_link_libraries(server
     lib_common
 	lib_game
+	lib_net
 )
 
 install(
