--- a/source/lib/lib_common/CMakeLists.txt
+++ b/source/lib/lib_common/CMakeLists.txt
@@ -9,12 +9,14 @@ set(lib_common_headers
 	"inc/logging"
 	"inc/libdummy"
 	"inc/unittests"
+	"inc/profiletimer"
 )
 
 set(lib_common_sources
 	"src/logging"
 	"src/libdummy"
 	"src/unittests"
+	"src/profiletimer"
 )
 
 add_library(lib_common "${lib_common_sources}" "${lib_common_headers}")
