--- a/source/app/app_client_headless/CMakeLists.txt
+++ b/source/app/app_client_headless/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(client_headless)
+project(app_client_headless)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
 
 # Libraries
@@ -10,27 +10,27 @@ include_directories(${CMAKE_SOURCE_DIR}/lib/lib_net/inc)
 file(GLOB_RECURSE CLIENT_HEADLESS_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h")
 file(GLOB_RECURSE CLIENT_HEADLESS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
-add_executable(client_headless "${CLIENT_HEADLESS_SOURCES}" "${CLIENT_HEADLESS_HEADERS}")
-add_dependencies(client_headless
+add_executable(app_client_headless "${CLIENT_HEADLESS_SOURCES}" "${CLIENT_HEADLESS_HEADERS}")
+add_dependencies(app_client_headless
     lib_common
     lib_game
     lib_net
 )
 
-target_link_libraries(client_headless
+target_link_libraries(app_client_headless
     lib_common
     lib_game
     lib_net
 )
 
 install(
-    TARGETS  client_headless
+    TARGETS  app_client_headless
     CONFIGURATIONS Debug
     DESTINATION bin/Debug
 )
 
 install(
-    TARGETS client_headless
+    TARGETS app_client_headless
     CONFIGURATIONS Release
     DESTINATION bin/Release
 )
