--- a/source/app/app_server/CMakeLists.txt
+++ b/source/app/app_server/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(server)
+project(app_server)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
 
 # Libraries
@@ -10,27 +10,27 @@ include_directories(${CMAKE_SOURCE_DIR}/lib/lib_net/inc)
 file(GLOB_RECURSE SERVER_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h")
 file(GLOB_RECURSE SERVER_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
-add_executable(server "${SERVER_SOURCES}" "${SERVER_HEADERS}")
-add_dependencies(server
+add_executable(app_server "${SERVER_SOURCES}" "${SERVER_HEADERS}")
+add_dependencies(app_server
     lib_common
     lib_game
     lib_net
 )
 
-target_link_libraries(server
+target_link_libraries(app_server
     lib_common
     lib_game
     lib_net
 )
 
 install(
-    TARGETS  server
+    TARGETS  app_server
     CONFIGURATIONS Debug
     DESTINATION bin/Debug
 )
 
 install(
-    TARGETS server
+    TARGETS app_server
     CONFIGURATIONS Release
     DESTINATION bin/Release
 )
